--- a/spa/index.html
+++ b/spa/index.html
@@ -7,6 +7,7 @@
   * {
     margin:0;
     padding:0;
+    color: yellow;
   }
 
   body {
@@ -22,7 +23,10 @@
 </style>
 </head>
 <body ng-controller="main" ng-cloak >
-  <clock id="clock"></clock>
+
+  <clock id="clock" weasleys="state.weasleys"></clock>
+  <h1><pre>{{state}}</pre></h1>
+
   <script src="./angular.min.js"></script>
   <script src="./script.js"></script>
 </body>
